<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LearnWords</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Играть</string>
    <string name="downloadDictionary">Загрузить словарь</string>
    <string name="settings">Настройки</string>
    <string name="ok">ok</string>
    <string name="check">Проверить</string>
    <string name="train">Тренировать</string>
    <string name="create_dictionary">Создать словарь</string>
    <string name="edit_dictionary">Редактировать словарь</string>
    <string name="preferences">Настройки</string>
    <string name="my_dictionaries">Мои словари:</string>
    <string name="addNewDict">Добавить</string>
    <string name="btnSave">Сохранить</string>
    <string name="word">Слово</string>
    <string name="translate">Перевод</string>
    <string name="btnAddNewWords">Добавить</string>

</resources>
