<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:id="@+id/txtDictName"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:layout_weight="1"
                android:id="@+id/txtWord"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate"
                android:layout_weight="1"
                android:id="@+id/txtTranslate"/>
    </LinearLayout>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvWords"
            android:layout_weight="1"
            android:scrollbarAlwaysDrawVerticalTrack="true"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAddNewWords"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:id="@+id/btnAddNewWords"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSave"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:id="@+id/btnSave" />
        </LinearLayout>

</LinearLayout>